feat: implement authorization with HTTPS certificate

--- a/OcelotGateway/appsettings.json
+++ b/OcelotGateway/appsettings.json
@@ -1,8 +1,18 @@
 {
-  "Urls": [
-    "http://localhost:3000",
-    "https://localhost:3443"
-  ],
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:3000"
+      },
+      "Https": {
+        "Url": "https://localhost:3443",
+        "Certificate": {
+          "Path": "C:\\path\\to\\certificate\\cert.pfx",
+          "Password": "***"
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,12 +21,12 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Key": "Key",
+    "Key": "MySuperSecretKey1234567890_ExtraSecure!",
     "Issuer": "IntegrationServerIssuer",
     "Audience": "IntegrationServerAudience",
     "Subject": "IntegrationServerSubject",
     "ClientId": "webclient",
-    "ClientSecret": "ClientSecret",
+    "ClientSecret": "ClientSecretMySuperSecretKey123",
     "Clients": [
       {
         "ClientId": "web",
@@ -35,5 +45,5 @@
       }
     ]
   },
-  "GatewaySecret": "super-secret-value"
+  "GatewaySecret": "MySuperSecretKey123"
 }
