--- a/OcelotGateway/OcelotGateway.csproj
+++ b/OcelotGateway/OcelotGateway.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Ocelot" Version="24.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
