--- a/OcelotGateway/OcelotGateway.csproj
+++ b/OcelotGateway/OcelotGateway.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="log4net" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="Ocelot" Version="24.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
