feat: implement unified swagger

--- a/OcelotGateway/appsettings.json
+++ b/OcelotGateway/appsettings.json
@@ -31,12 +31,14 @@
       {
         "ClientId": "web",
         "ClientSecret": "web",
-        "Role": "web"
+        "Role": "user",
+        "Allowed": []
       },
       {
         "ClientId": "user",
         "ClientSecret": "user",
-        "Role": "user"
+        "Role": "user",
+        "Allowed": [ "/thirdparty/<endpoint-request>", "/database/<endpoint-request>" ]
       },
       {
         "ClientId": "admin",
@@ -45,5 +47,19 @@
       }
     ]
   },
-  "GatewaySecret": "MySuperSecretKey123"
+  "GatewaySecret": "MySuperSecretKey123",
+  "SwaggerEndpoints": [
+    {
+      "Url": "/api/database/swagger/v1/swagger.json",
+      "Name": "Thirdparty to Genesys Service API"
+    },
+    {
+      "Url": "/api/sirael/swagger/v1/swagger.json",
+      "Name": "Genesys to thirdparty Service API"
+    },
+    {
+      "Url": "/api/workforce/swagger/v1/swagger.json",
+      "Name": "Workforce Management Service API"
+    }
+  ]
 }
